remove space timedout

--- a/templates/booking-timedout-guest.html
+++ b/templates/booking-timedout-guest.html
@@ -223,7 +223,7 @@
                 <tr><td class="vspace15" height="40" style="font-size: 0; line-height:40px;">&nbsp;</td></tr>
                 <tr>
                     <td class="txt14" align="center" valign="top" style="padding: 0px 20px; font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:26px; font-weight: bold;mso-line-height-rule:exactly;line-height:38px;color:#F7F7F7;">
-                        Unfortunately, your <span class="on_line">reservation <span style="white-space: nowrap;">has timed-out.</span></span>
+                        Unfortunately, your <span class="on_line">reservation <span style="white-space: nowrap;"><br/>has timed-out.</span></span>
                     </td>
                 </tr>
                 <tr><td class="vspace10" height="5" style="font-size: 0; line-height:5px;">&nbsp;</td></tr>
