--- a/templates/booking-timedout-guest.html
+++ b/templates/booking-timedout-guest.html
@@ -530,7 +530,7 @@
                                                 <td align="center" valign="top">
                                                     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
                                                         <tr>
-                                                            <td bgcolor="#6ADC91" style="padding: 22px 0px; border-radius:8px; -webkit-border-radius: 8px; color: #ffffff;font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: bold;font-size: 18px; line-height: 24px; white-space: nowrap;" align="center">
+                                                            <td bgcolor="#2DA577" style="padding: 22px 0px; border-radius:8px; -webkit-border-radius: 8px; color: #ffffff;font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: bold;font-size: 18px; line-height: 24px; white-space: nowrap;" align="center">
                                                                 <a href="{{appLink}}/space/{{listingId}}" target="_blank" style="color: #ffffff; text-decoration: none; display: inline-block;">Book again</a></td>
                                                         </tr>
                                                     </table>
