--- a/templates/publish-listing-confirmation.html
+++ b/templates/publish-listing-confirmation.html
@@ -765,7 +765,7 @@
                       <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
                         <tr>
                           <td
-                            bgcolor="#6ADC91"
+                            bgcolor="#2DA577"
                             style="padding: 22px 0px; border-radius:8px; -webkit-border-radius: 8px; color: #ffffff;font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: bold;font-size: 18px; line-height: 24px; white-space: nowrap;"
                             align="center"
                           >
