--- a/templates/booking-instant-email-guest.html
+++ b/templates/booking-instant-email-guest.html
@@ -1107,7 +1107,7 @@
                               href="{{appLink}}/account/booking"
                               target="_blank"
                               style="color: #ffffff; text-decoration: none; display: inline-block;"
-                              >Finalize your booking</a
+                              >Finalise your booking</a
                             >
                           </td>
                         </tr>
