--- a/templates/booking-instant-email-guest.html
+++ b/templates/booking-instant-email-guest.html
@@ -730,7 +730,7 @@
                                       href="https://app.spacenow.com/account/booking"
                                       target="_blank"
                                       style="color: #ffffff; text-decoration: none; display: inline-block;"
-                                      >Finalize your booking</a
+                                      >Finalise your booking</a
                                     >
                                   </td>
                                 </tr>
