--- a/templates/booking-ready-to-pay-email.html
+++ b/templates/booking-ready-to-pay-email.html
@@ -571,7 +571,7 @@
                                   style="padding: 22px 0px; border-radius:8px; -webkit-border-radius: 8px; color: #ffffff;font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: bold;font-size: 18px; line-height: 24px; white-space: nowrap;"
                                   align="center">
                                   <a href="{{appLink}}/checkout/{{bookingId}}/pay" target="_blank"
-                                    style="color: #ffffff; text-decoration: none; display: inline-block;">Finalize your booking</a>
+                                    style="color: #ffffff; text-decoration: none; display: inline-block;">Finalise your booking</a>
                                 </td>
                               </tr>
                             </table>
@@ -939,7 +939,7 @@
                           style="padding: 22px 0px; border-radius:8px; -webkit-border-radius: 8px; color: #ffffff;font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: bold;font-size: 18px; line-height: 24px; white-space: nowrap;"
                           align="center">
                           <a href="{{appLink}}/checkout/{{bookingId}}/pay" target="_blank"
-                            style="color: #ffffff; text-decoration: none; display: inline-block;">Finalize your booking
+                            style="color: #ffffff; text-decoration: none; display: inline-block;">Finalise your booking
                           </a>
                         </td>
                       </tr>
