--- a/templates/booking-expiry-email-guest.html
+++ b/templates/booking-expiry-email-guest.html
@@ -609,10 +609,10 @@
                                                                 border="0"
                                                                 cellspacing="0"
                                                                 cellpadding="0"
-                                                                style="width: 99px;"
+                                                                style="width: auto;"
                                                                 >
                                                           <tr>
-                                                            <td valign="top" align="center">
+                                                            <td valign="top" align="center" style="padding: 0 10px;">
                                                               <table
                                                                       align="center"
                                                                       cellpadding="0"
