--- a/templates/booking-instant-email-host.html
+++ b/templates/booking-instant-email-host.html
@@ -805,7 +805,7 @@
                                                     alt=""
                                                     title=""
                                                     width="243"
-                                                    style="display:block; border-top-left-radius: 4px; border-bottom-left-radius: 4px; -webkit-border-top-left-radius: 4px;-webkit-border-bottom-left-radius: 4px;height: 182px;object-fit: cover;"
+                                                    style="display:block; border-top-left-radius: 4px; border-bottom-left-radius: 4px; -webkit-border-top-left-radius: 4px;-webkit-border-bottom-left-radius: 4px;height: 186px;object-fit: cover;"
                                                     border="0"
                                                     class="full_img480"
                                                     />
@@ -874,7 +874,7 @@
                                                                       style="border-collapse: collapse;"
                                                                       >
                                                                 <tr>
-                                                                  <td height="20" align="center" valign="middle">
+                                                                  <td height="20" align="center" valign="middle" style="padding-top: 5px">
                                                                     <img
                                                                             src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/{{category}}.png"
                                                                             alt=""
