--- a/templates/booking-ready-to-pay-email.html
+++ b/templates/booking-ready-to-pay-email.html
@@ -647,7 +647,7 @@
                                                   alt=""
                                                   title=""
                                                   width="243"
-                                                  style="display:block; border-top-left-radius: 4px; border-bottom-left-radius: 4px; -webkit-border-top-left-radius: 4px;-webkit-border-bottom-left-radius: 4px;height: 182px;object-fit: cover;"
+                                                  style="display:block; border-top-left-radius: 4px; border-bottom-left-radius: 4px; -webkit-border-top-left-radius: 4px;-webkit-border-bottom-left-radius: 4px;height: 186px;object-fit: cover;"
                                                   border="0"
                                                   class="full_img480"
                                                   />
@@ -716,7 +716,7 @@
                                                                     style="border-collapse: collapse;"
                                                                     >
                                                               <tr>
-                                                                <td height="20" align="center" valign="middle">
+                                                                <td height="20" align="center" valign="middle" style="padding-top: 5px">
                                                                   <img
                                                                           src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/{{category}}.png"
                                                                           alt=""
@@ -831,16 +831,6 @@
                                                             {{minimumTerm}}&nbsp;{{term}}</td>
                                                         </tr>
                                                       </table>
-                                                    </td>
-                                                    <td align="left" valign="middle">
-                                                      <img
-                                                              src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/starts.png"
-                                                              alt=""
-                                                              title=""
-                                                              width="63"
-                                                              style="outline: none"
-                                                              border="0"
-                                                              />
                                                     </td>
                                                   </tr>
                                                 </table>
