--- a/templates/booking-expiry-email-guest.html
+++ b/templates/booking-expiry-email-guest.html
@@ -552,7 +552,7 @@
                                               alt=""
                                               title=""
                                               width="243"
-                                              style="display:block; border-top-left-radius: 4px; border-bottom-left-radius: 4px; -webkit-border-top-left-radius: 4px;-webkit-border-bottom-left-radius: 4px;height: 186px;object-fit: cover;"
+                                              style="display:block; border-top-left-radius: 4px; border-bottom-left-radius: 4px; -webkit-border-top-left-radius: 4px;-webkit-border-bottom-left-radius: 4px;height: 189px;object-fit: cover;"
                                               border="0"
                                               class="full_img480"
                                             />
@@ -792,7 +792,8 @@
                                                                       border-radius: 50%;
                                                                       width: 20px;
                                                                       height: 20px;
-                                                                      object-fit: cover;"
+                                                                      object-fit: cover;
+                                                                      margin-top: 3px;"
                                                                       border="0"
                                                                       />
                                                             </td>
