--- a/templates/booking-request-email-host.html
+++ b/templates/booking-request-email-host.html
@@ -219,6 +219,9 @@
           font-size: 17px !important;
           line-height: 21px !important;
         }
+        .width_mob {
+          width: 230px !important;
+        }
       }
     </style>
   </head>
@@ -942,11 +945,12 @@
                                                 <td
                                                         align="left"
                                                         valign="top"
+                                                        class="width_mob"
                                                         style="padding: 13px 0px 7px; font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: bold; font-size:14px; mso-line-height-rule:exactly;line-height:19px;color:#1F252A;
                                                         white-space: nowrap;
                                                         overflow: hidden !important;
                                                         text-overflow: ellipsis;
-                                                        width: 300px !important;
+                                                        width: 300px;
                                                         display: inline-block;"
                                                         >
                                                   {{ listTitle }}
