--- a/templates/booking-timedout-guest.html
+++ b/templates/booking-timedout-guest.html
@@ -171,6 +171,9 @@
                 font-size: 18px!important;
                 line-height:22px!important;
             }
+            .width_mob {
+              width: 230px !important;
+            }
         }
 
     </style>
@@ -595,7 +598,7 @@
                                                               alt=""
                                                               title=""
                                                               width="243"
-                                                              style="display:block; border-top-left-radius: 4px; border-bottom-left-radius: 4px; -webkit-border-top-left-radius: 4px;-webkit-border-bottom-left-radius: 4px;height: 186px;object-fit: cover;"
+                                                              style="display:block; border-top-left-radius: 4px; border-bottom-left-radius: 4px; -webkit-border-top-left-radius: 4px;-webkit-border-bottom-left-radius: 4px;height: 189px;object-fit: cover;"
                                                               border="0"
                                                               class="full_img480"
                                                               />
@@ -652,10 +655,10 @@
                                                                           border="0"
                                                                           cellspacing="0"
                                                                           cellpadding="0"
-                                                                          style="width: 99px;"
+                                                                          style="width: auto;"
                                                                           >
                                                                     <tr>
-                                                                      <td valign="top" align="center">
+                                                                      <td valign="top" align="center" style="padding: 0 10px;">
                                                                         <table
                                                                                 align="center"
                                                                                 cellpadding="0"
@@ -664,9 +667,9 @@
                                                                                 style="border-collapse: collapse;"
                                                                                 >
                                                                           <tr>
-                                                                            <td height="34" align="center" valign="middle">
+                                                                            <td height="20" align="center" valign="middle" style="padding-top: 5px">
                                                                               <img
-                                                                                      src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/img_08_icon1.png"
+                                                                                      src="https://prod-spacenow-images.s3-ap-southeast-2.amazonaws.com/emails/images/{{category}}.png"
                                                                                       alt=""
                                                                                       title=""
                                                                                       width="25"
@@ -675,7 +678,7 @@
                                                                                       />
                                                                             </td>
                                                                             <td
-                                                                                    height="34"
+                                                                                    height="20"
                                                                                     align="center"
                                                                                     valign="middle"
                                                                                     style="padding-top: 1px; color: #172439;font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: 600;font-size: 12px; line-height: 14px;"
@@ -701,7 +704,13 @@
                                                           <td
                                                                   align="left"
                                                                   valign="top"
-                                                                  style="padding: 13px 0px 7px; font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: bold; font-size:14px; mso-line-height-rule:exactly;line-height:19px;color:#1F252A;"
+                                                                  class="width_mob"
+                                                                  style="padding: 13px 0px 7px; font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: bold; font-size:14px; mso-line-height-rule:exactly;line-height:19px;color:#1F252A;
+                                                                  white-space: nowrap;
+                                                                  overflow: hidden !important;
+                                                                  text-overflow: ellipsis;
+                                                                  width: 300px;
+                                                                  display: inline-block;"
                                                                   >
                                                             {{ listTitle }}
                                                           </td>
@@ -826,7 +835,12 @@
                                                                                 alt=""
                                                                                 title=""
                                                                                 width="26"
-                                                                                style="outline: none"
+                                                                                style="outline: none;
+                                                                                  border-radius: 50%;
+                                                                                  width: 20px;
+                                                                                  height: 20px;
+                                                                                  object-fit: cover;
+                                                                                  margin-top: 3px;"
                                                                                 border="0"
                                                                                 />
                                                                       </td>
