--- a/templates/message-notification-guest.html
+++ b/templates/message-notification-guest.html
@@ -437,7 +437,9 @@
                                     alt=""
                                     width="113"
                                     border="0"
-                                    style="display: block; outline: none;"
+                                    style="display: block; outline: none;border-radius: 50%;
+                                    object-fit: cover;
+                                    height: 113px;"
                                   />
                                 </td>
                                 <td width="30" class="space15">&nbsp;</td>
