--- a/templates/inspection-notification-guest.html
+++ b/templates/inspection-notification-guest.html
@@ -399,7 +399,7 @@
                       valign="top"
                       style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:16px; mso-line-height-rule:exactly;line-height:30px;color:#172439;"
                     >
-                      Here are the inspection request details:
+                      Here are the inspection request details you sent:
                     </td>
                   </tr>
                   <tr>
@@ -639,6 +639,9 @@
                   </tr>
                 </table>
               </td>
+            </tr>
+            <tr>
+              <td height="40" style="font-size: 0; line-height:40px;">&nbsp;</td>
             </tr>
             <tr>
               <td
