--- a/templates/message-notification-host.html
+++ b/templates/message-notification-host.html
@@ -641,6 +641,9 @@
               </td>
             </tr>
             <tr>
+              <td height="40" style="font-size: 0; line-height:40px;">&nbsp;</td>
+            </tr>
+            <tr>
               <td
                 class="txt14"
                 align="center"
