testing notif inspection

--- a/templates/inspection-notification-guest.html
+++ b/templates/inspection-notification-guest.html
@@ -217,6 +217,9 @@
           text-align: center !important;
           padding-top: 3px !important;
         }
+        .width_mob {
+          width: 230px !important;
+        }
       }
       @media only screen and (max-width: 410px) {
         .img95 {
@@ -514,10 +517,10 @@
                       </table>
                     </td>
                   </tr>
-                  <tr class="mobile-hide">
+                  <tr>
                     <td height="32" style="font-size: 0; line-height:32px;">&nbsp;</td>
                   </tr>
-                  <tr class="mobile-hide">
+                  <tr>
                     <td
                       align="left"
                       valign="top"
@@ -526,7 +529,7 @@
                       The space:
                     </td>
                   </tr>
-                  <tr class="mobile-hide">
+                  <tr>
                     <td height="32" style="font-size: 0; line-height:32px;">&nbsp;</td>
                   </tr>
                   <tr>
