fix link cancel inspection

--- a/templates/inspection-notification-guest.html
+++ b/templates/inspection-notification-guest.html
@@ -806,7 +806,7 @@
                                   align="center"
                                 >
                                   <a
-                                    href="{{ appLink }}/message/{{ messageId }}?a=cancel-inspection"
+                                    href="{{ appLink }}account/message/{{ messageId }}?a=cancel-inspection"
                                     target="_blank"
                                     style="color: #ffffff; text-decoration: none; display: inline-block;"
                                     >Cancel request</a
