cancel inspec guest

--- a/templates/inspection-cancel-notification-guest.html
+++ b/templates/inspection-cancel-notification-guest.html
@@ -806,10 +806,10 @@
                                   align="center"
                                 >
                                   <a
-                                    href="{{ appLink }}account/message/{{ messageId }}?a=cancel-inspection"
+                                    href="{{ appLink }}/search"
                                     target="_blank"
                                     style="color: #ffffff; text-decoration: none; display: inline-block;"
-                                    >Cancel request</a
+                                    >Look again</a
                                   >
                                 </td>
                               </tr>
