--- a/templates/booking-timedout-guest.html
+++ b/templates/booking-timedout-guest.html
@@ -251,14 +251,13 @@
                                     Hi&nbsp;{{guestName}},
                                 </td>
                             </tr>
-                            <tr><td height="24" style="font-size: 0; line-height:24px;">&nbsp;</td></tr>
+                            <tr><td height="40" style="font-size: 0; line-height:24px;">&nbsp;</td></tr>
                             <tr>
                                 <td align="left" valign="top" style="font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:16px; mso-line-height-rule:exactly;line-height:26px;color:#172439;">
                                   Your booking has unfortunately timed out. We can only hold reservations for 30 minutes. After this Spacenow will put it back on the market for others to view the availability.
-                                    <br/><br/>
                                 </td>
                             </tr>
-                            <tr><td height="40" style="font-size: 0; line-height:40px;">&nbsp;</td></tr>
+                            <tr><td height="50" style="font-size: 0; line-height:40px;">&nbsp;</td></tr>
                             <tr>
                               <td align="center" valign="top">
                                 <table
@@ -554,7 +553,7 @@
                                                                                   height: 20px;
                                                                                   object-fit: cover;
                                                                                   margin-top: 3px;"
-                                                                                border="0"
+                                                                                  border="0"
                                                                                 />
                                                                       </td>
                                                                       <td align="center" valign="middle" style="padding: 5px 5px; font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-size:10px; mso-line-height-rule:exactly;line-height:13px;color:#1F252A;">
@@ -591,13 +590,13 @@
                                 </table>
                               </td>
                             </tr>
-                            <tr><td height="40" style="font-size: 0; line-height:40px;">&nbsp;</td></tr>
+                            <tr><td height="60" style="font-size: 0; line-height:40px;">&nbsp;</td></tr>
                             <tr>
                                 <td align="center" valign="top">
                                     <table align="left" cellpadding="0" cellspacing="0" border="0" style="border-collapse: collapse;">
                                         <tr>
                                             <td align="left" valign="top">
-                                                <img class="img95" src="{{guestPhoto}}" alt="" width="113" border="0" style="display: block; outline: none;border-radius: 50%;object-fit: cover;"/>
+                                                <img class="img95" src="{{guestPhoto}}" alt="" width="113" border="0" style="display: block; outline: none;border-radius: 50%;object-fit: cover;  width: 20px;height: 20px;"/>
                                             </td>
                                             <td width="20" class="space15">&nbsp;</td>
                                             <td align="center" valign="middle">
@@ -614,7 +613,7 @@
                                     </table>
                                 </td>
                             </tr>
-                            <tr><td height="40" style="font-size: 0; line-height:40px;">&nbsp;</td></tr>
+                            <tr><td height="60" style="font-size: 0; line-height:40px;">&nbsp;</td></tr>
                             <tr>
                               <td align="center" valign="top">
                                 <table
