--- a/templates/booking-request-email-guest.html
+++ b/templates/booking-request-email-guest.html
@@ -1098,51 +1098,8 @@
                     </td>
                   </tr>
                   <tr>
-                    <td height="78" style="font-size: 0; line-height:20px;">&nbsp;</td>
+                    <td height="40" style="font-size: 0; line-height:20px;">&nbsp;</td>
                   </tr>
-                  <!--[if !mso 9]><!-->
-                  <tr class="mobile-visible">
-                    <td height="0" align="center" valign="top">
-                      <div
-                        class="gmail"
-                        style="display:none; line-height:0px; float:left; mso-hide: all; width:0; overflow:hidden; max-height:0;"
-                      >
-                        <table
-                          width="100%"
-                          align="center"
-                          cellpadding="0"
-                          cellspacing="0"
-                          border="0"
-                          style="border-collapse: collapse;"
-                        >
-                          <tr>
-                            <td height="30" style="font-size: 0; line-height:20px;">&nbsp;</td>
-                          </tr>
-                          <tr>
-                            <td align="center" valign="top">
-                              <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
-                                <tr>
-                                  <td
-                                    bgcolor="#2DA577"
-                                    style="padding: 22px 0px; border-radius:8px; -webkit-border-radius: 8px; color: #ffffff;font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: bold;font-size: 18px; line-height: 24px; white-space: nowrap;"
-                                    align="center"
-                                  >
-                                    <a
-                                      href="{{appLink}}/space/{{listingId}}"
-                                      target="_blank"
-                                      style="color: #ffffff; text-decoration: none; display: inline-block;"
-                                      >View booking</a
-                                    >
-                                  </td>
-                                </tr>
-                              </table>
-                            </td>
-                          </tr>
-                        </table>
-                      </div>
-                    </td>
-                  </tr>
-                  <!--<![endif]-->
                   {{#if message}}
                   <tr>
                     <td height="50" style="font-size: 0; line-height:50px;">&nbsp;</td>
@@ -1186,6 +1143,52 @@
                     <td height="50" style="font-size: 0; line-height:50px;">&nbsp;</td>
                   </tr>
                   {{/if}}
+                  <!--[if !mso 9]><!-->
+                    <tr class="mobile-visible">
+                      <td height="0" align="center" valign="top">
+                        <div
+                          class="gmail"
+                          style="display:none; line-height:0px; float:left; mso-hide: all; width:0; overflow:hidden; max-height:0;"
+                        >
+                          <table
+                            width="100%"
+                            align="center"
+                            cellpadding="0"
+                            cellspacing="0"
+                            border="0"
+                            style="border-collapse: collapse;"
+                          >
+                            <tr>
+                              <td height="30" style="font-size: 0; line-height:20px;">&nbsp;</td>
+                            </tr>
+                            <tr>
+                              <td align="center" valign="top">
+                                <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
+                                  <tr>
+                                    <td
+                                      bgcolor="#2DA577"
+                                      style="padding: 22px 0px; border-radius:8px; -webkit-border-radius: 8px; color: #ffffff;font-family: 'Montserrat', Helvetica, Arial, sans-serif; font-weight: bold;font-size: 18px; line-height: 24px; white-space: nowrap;"
+                                      align="center"
+                                    >
+                                      <a
+                                        href="{{appLink}}/space/{{listingId}}"
+                                        target="_blank"
+                                        style="color: #ffffff; text-decoration: none; display: inline-block;"
+                                        >View booking</a
+                                      >
+                                    </td>
+                                  </tr>
+                                </table>
+                              </td>
+                            </tr>
+                          </table>
+                        </div>
+                      </td>
+                    </tr>
+                    <!--<![endif]-->
+                  <tr class="mobile-hide">
+                    <td height="80" style="font-size: 0; line-height:20px;">&nbsp;</td>
+                  </tr>      
                   <tr class="mobile-hide">
                     <td align="center" valign="top">
                       <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
