--- a/templates/booking-timedout-guest.html
+++ b/templates/booking-timedout-guest.html
@@ -257,7 +257,7 @@
                                   Your booking has unfortunately timed out. We can only hold reservations for 30 minutes. After this Spacenow will put it back on the market for others to view the availability.
                                 </td>
                             </tr>
-                            <tr><td height="50" style="font-size: 0; line-height:40px;">&nbsp;</td></tr>
+                            <tr><td height="60" style="font-size: 0; line-height:40px;">&nbsp;</td></tr>
                             <tr>
                               <td align="center" valign="top">
                                 <table
@@ -596,7 +596,8 @@
                                     <table align="left" cellpadding="0" cellspacing="0" border="0" style="border-collapse: collapse;">
                                         <tr>
                                             <td align="left" valign="top">
-                                                <img class="img95" src="{{guestPhoto}}" alt="" width="113" border="0" style="display: block; outline: none;border-radius: 50%;object-fit: cover;  width: 20px;height: 20px;"/>
+                                                <img class="img95" src="{{guestPhoto}}" alt="" width="113" border="0" style="display: block; outline: none;border-radius: 50%;object-fit: cover;"  width="110"
+                                                height="110"/>
                                             </td>
                                             <td width="20" class="space15">&nbsp;</td>
                                             <td align="center" valign="middle">
@@ -876,7 +877,7 @@
                                 </td>
                             </tr>
                             <!--<![endif]-->
-                            <tr><td height="50" style="font-size: 0; line-height:45px;">&nbsp;</td></tr>
+                            <tr class="mobile-hide"><td height="50" style="font-size: 0; line-height:45px;">&nbsp;</td></tr>
                           
                             <tr class="mobile-hide">
                                 <td align="center" valign="top">
