--- a/templates/booking-timedout-guest.html
+++ b/templates/booking-timedout-guest.html
@@ -596,7 +596,7 @@
                                     <table align="left" cellpadding="0" cellspacing="0" border="0" style="border-collapse: collapse;">
                                         <tr>
                                             <td align="left" valign="top">
-                                                <img class="img95" src="{{guestPhoto}}" alt="" width="113" border="0" style="display: block; outline: none;border-radius: 50%;object-fit: cover;"  width="110"
+                                                <img class="img95" src="{{guestPhoto}}" alt="" width="113" border="0" style="display: block; outline: none;border-radius: 50%;object-fit: cover; width:110px; height:110px"  width="110"
                                                 height="110"/>
                                             </td>
                                             <td width="20" class="space15">&nbsp;</td>
@@ -877,7 +877,7 @@
                                 </td>
                             </tr>
                             <!--<![endif]-->
-                            <tr class="mobile-hide"><td height="50" style="font-size: 0; line-height:45px;">&nbsp;</td></tr>
+                            <tr class="mobile-hide"><td height="80" style="font-size: 0; line-height:80px;">&nbsp;</td></tr>
                           
                             <tr class="mobile-hide">
                                 <td align="center" valign="top">
