--- a/templates/booking-timedout-guest.html
+++ b/templates/booking-timedout-guest.html
@@ -596,7 +596,7 @@
                                     <table align="left" cellpadding="0" cellspacing="0" border="0" style="border-collapse: collapse;">
                                         <tr>
                                             <td align="left" valign="top">
-                                                <img class="img95" src="{{guestPhoto}}" alt="" width="113" border="0" style="display: block; outline: none;border-radius: 50%;object-fit: cover; width:110px; height:110px"  width="110"
+                                                <img src="{{guestPhoto}}" alt="" width="113" border="0" style="display: block; outline: none;border-radius: 50%;object-fit: cover; width:110px; height:110px"  width="110"
                                                 height="110"/>
                                             </td>
                                             <td width="20" class="space15">&nbsp;</td>
@@ -861,7 +861,7 @@
                                 <td height="0" align="center" valign="top">
                                     <div class="gmail" style="display:none; line-height:0px; float:left; mso-hide: all; width:0; overflow:hidden; max-height:0;">
                                         <table width="100%" align="center" cellpadding="0" cellspacing="0" border="0" style="border-collapse: collapse;">
-                                            <tr><td height="30" style="font-size: 0; line-height:20px;">&nbsp;</td></tr>
+                                            <tr><td height="45" style="font-size: 0; line-height:20px;">&nbsp;</td></tr>
                                             <tr>
                                                 <td align="center" valign="top">
                                                     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="0">
